@@ -1,3 +1,4 @@
+* #4027 Try to make sugar.presence log messages less misleading (smcv)
 * Changed default spacing to 15px (from 8px) (benzea)
 * Correct the height of the primary palette (benzea)
 * Use double leading underscores for callback names to avoid name collisions (erikos)
